# nix-whisper-transcription-demo

./: .dockerignore  .envrc  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  flake.nix  pyproject.toml  requirements.txt
src/nix_python/: logs.py  main.py  serve.py  version.py
src/nix_python/templates/: index.html
